syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto.gymnasium.v1.dimensions;

// Representation of the Project dimension.
message Project {
    // Unique identifier for the Project. Text representation of the UUID.
    string id = 1;

    // The description of the Project.
    string description = 2;

    // The name of the Project.
    string name = 3;

    // The slug of the Project. Unique identifier for the Project's web address.
    string slug = 4;

    // The timestamp when the Project was arcived.
    google.protobuf.Timestamp archive_time = 5;

    // The creation time of the Project.
    google.protobuf.Timestamp create_time = 6;

    // The timestamp of the last Project's update.
    google.protobuf.Timestamp update_time = 7;
}
